--- a/web/wp-content/themes/belgium/src/styles/mod.css
+++ b/web/wp-content/themes/belgium/src/styles/mod.css
@@ -420,7 +420,11 @@ a {
     max-width: 50%;
     /* height: 100%; */
     /* max-height: 80vh; */
-  } 
+  }
+
+  .button-wrap:last-child {
+    width: 100%;
+  }
 }
 
 @media (max-width: 1110px) {
